# Stroke-Prediction

./: .gitignore  README.md  graphs_generate.py  main.py  pyproject.toml  utils.py
app/static/: styles.css
app/templates/: index.html  upload.html
app/uploads/: middle_age_stroke.csv  seniors_stroke_prediction.csv
models/: model.joblib
src/: config.py  data_analysis.py  data_processing.py  graphs_generate.py  model_training.py  utils.py
