[tool.poetry]
name = "stroke-prediction"
version = "0.1.0"
description = ""
authors = ["Allan Rodrigo <allanrdg6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
